including modernizr in header-loaded init.js and corrected fixed nav clipping on ios

--- a/src/styles/base/_document.scss
+++ b/src/styles/base/_document.scss
@@ -9,8 +9,6 @@ html {
 html,
 body {
 	text-rendering: optimizeLegibility;
-	overflow-x: hidden;
-
 }
 html {
 	-webkit-overflow-scrolling: touch;
