--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -26,7 +26,7 @@ $line-height-sm: 1.2em;
 $line-height-xs: normal;
 
 // Font weights
-$weight-bold: 600;
+$weight-bold: 700;
 $weight-normal: 400;
 $weight-light: 200;
 
