--- a/src/styles/objects/_site-header.scss
+++ b/src/styles/objects/_site-header.scss
@@ -1,5 +1,5 @@
 body {
-	margin-top: 80px;
+	margin-top: 55px;
 
 	// fix weird margin error at top of page
 	&:before {
@@ -17,7 +17,9 @@ body {
 	position: fixed;
 	-webkit-overflow-scrolling: touch;
 
-	top:0;
+	backface-visibility: visible;
+
+	top:-25px;
 	left:0;
 	right:0;
 	width: 100%;
@@ -30,7 +32,7 @@ body {
 		content: '';
 		display:block;
 		position:fixed;
-		top:0;
+		top:-25px;
 		left:0;
 		right:0;
 		width: 100%;
@@ -45,19 +47,24 @@ body {
 	position:absolute;
 	display:block;
 	top:0;
-	@include rem-value(left, $content-margin);
+	left:0;
 	width: 140px;
 	height: 87px;
-	padding: 20px 20px 14px;
+	//padding: 20px 20px 14px;
+	padding: 0;
 	background: $color-minuba-primary;
 	z-index: 2;
 }
 
 .site-header__logo__sprite {
-	width:100%;
-	height:auto;
-	margin-top: 10px;
+	position: absolute;
+	width:100px;
+	left: 20px;
+	bottom: 14px;
+	height:36px;
+	//height: auto;
 	fill: $color-white;
+
 }
 
 .site-header__title {
@@ -175,6 +182,20 @@ body {
 
 
 @include breakpoint($grid-md) {
+
+	body {
+		margin-top: 80px;
+	}
+	.site-header {
+		top: 0;
+		&:before {
+			top: 0;
+		}
+	}
+
+	.site-header__logo {
+		@include rem-value(left, $content-margin);
+	}
 
 	.site-header__menu {
 		margin-top: 44px;
